--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5"
