--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongo-sanitize": "^1.1.0",
-    "mongoose": "^8.4.1",
+    "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.3"
   }
 }
