--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-player": "^2.16.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.23.1",
