--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NODE_ENV=development
 PORT=5000
 JWT_SECRET=wreckcrewwreck
+MONGO_URI = mongodb+srv://judo2000:judoGold2000!!@cluster0.ljkcx.mongodb.net/den_judo_DB?retryWrites=true&w=majority
